--- a/sender.conf
+++ b/sender.conf
@@ -1,3 +1,11 @@
+# GrayLog Settings
+server="192.168.1.100"
+port="12202"
+
 # Application Name
 application="syslog"
 log_file="/var/log/syslog"
+
+# Application Name
+application="auth"
+log_file="/var/log/auth.log"
