--- a/sender.conf
+++ b/sender.conf
@@ -1,5 +1,5 @@
 # GrayLog Settings
-server="192.168.1.100"
+server="10.239.227.56"
 port="12202"
 
 # Application Name
@@ -9,3 +9,7 @@ log_file="/var/log/syslog"
 # Application Name
 application="auth"
 log_file="/var/log/auth.log"
+
+# Application Name
+application="graylog-collector"
+log_file="/var/log/graylog-collector/collector.log"
