--- a/sender.conf
+++ b/sender.conf
@@ -1,15 +1,15 @@
 # GrayLog Settings
-server="10.239.227.56"
-port="12202"
+##server="192.168.1.100"
+##port="12202"
 
 # Application Name
-application="syslog"
-log_file="/var/log/syslog"
+##application="syslog"
+##log_file="/var/log/syslog"
 
 # Application Name
-application="auth"
-log_file="/var/log/auth.log"
+##application="auth"
+##log_file="/var/log/auth.log"
 
-# Application Name
-application="graylog-collector"
-log_file="/var/log/graylog-collector/collector.log"
+## Email Settings
+#relayhost = "your-email-server.com"
+#email_recipient = "your-email@server.com"
