--- a/sender.conf
+++ b/sender.conf
@@ -11,5 +11,5 @@
 #log_file="/var/log/auth.log"
 
 ## Email Settings
-#relayhost = "your-email-server.com"
-#email_recipient = "your-email@server.com"
+#relayhost = "your-relayhost"
+#email_recipient = "your-email@something.com"
