--- a/sender.conf
+++ b/sender.conf
@@ -2,6 +2,9 @@
 #server="192.168.1.100"
 #port="12202"
 
+## PySender executables location
+#file_location="/some/place/PySender"
+
 ## Application Name
 #application="syslog"
 #log_file="/var/log/syslog"
