--- a/sender.conf
+++ b/sender.conf
@@ -1,6 +1,7 @@
 ## GrayLog Settings
 #server="192.168.1.100"
 #port="12202"
+#load_balancer="12900"
 
 ## PySender executables location
 #file_location="/some/place/PySender"
