added workaround journal issue

--- a/sender.conf
+++ b/sender.conf
@@ -2,6 +2,8 @@
 #server="192.168.1.100"
 #port="12202"
 #load_balancer="12900"
+#graylog_admin_user="user"
+#graylog_admin_password="password"
 
 ## PySender executables location
 #file_location="/some/place/PySender"
