got rid of email and corrected stdout

--- a/sender.conf
+++ b/sender.conf
@@ -1,9 +1,9 @@
 ## GrayLog Settings
 #server="192.168.1.100"
-#port="12202"
+#port="1514"
 #load_balancer="12900"
-#graylog_admin_user="user"
-#graylog_admin_password="password"
+graylog_admin_user="admin"
+graylog_admin_password="password"
 
 ## PySender executables location
 #file_location="/some/place/PySender"
@@ -16,6 +16,3 @@
 #application="auth"
 #log_file="/var/log/auth.log"
 
-## Email Settings
-#relayhost = "your-relayhost"
-#email_recipient = "your-email@something.com"
