--- a/sender.conf
+++ b/sender.conf
@@ -1,8 +1,8 @@
 ## GrayLog Settings
 #server="192.168.1.100"
-#port="1514"
+#port="1515"
 #load_balancer="12900"
-#graylog_admin_user="admin"
+#graylog_admin_user="user"
 #graylog_admin_password="password"
 
 ## PySender executables location
@@ -16,3 +16,7 @@
 #application="auth"
 #log_file="/var/log/auth.log"
 
+## SSL
+#ssl_enable="True"
+#ssl_cert = "/etc/ssl/certs/pysender.crt"
+#ssl_key = "/etc/ssl/certs/pysender.key"
