--- a/sender.conf
+++ b/sender.conf
@@ -6,7 +6,7 @@
 #graylog_admin_password="password"
 
 ## PySender executables location
-#file_location="/some/place/PySender"
+#file_location="/home/eorochena/PycharmProjects/PySender"
 
 ## Application Name
 #application="syslog"
