--- a/sender.conf
+++ b/sender.conf
@@ -1,22 +1,22 @@
 ## GrayLog Settings
-#server="192.168.1.100"
-#port="1515"
-#load_balancer="12900"
-#graylog_admin_user="user"
-#graylog_admin_password="password"
+server="10.239.227.56"
+port="1515"
+load_balancer="12900"
+graylog_admin_user="root"
+graylog_admin_password="ch@ng3m3"
 
 ## PySender executables location
-#file_location="/home/eorochena/PycharmProjects/PySender"
+file_location="/home/eorochena/GitHub/PySender"
 
 ## Application Name
-#application="syslog"
-#log_file="/var/log/syslog"
+application="syslog"
+log_file="/var/log/syslog"
 
 ## Application Name
-#application="auth"
-#log_file="/var/log/auth.log"
+application="auth"
+log_file="/var/log/auth.log"
 
 ## SSL
-#ssl_enable="True"
-#ssl_cert="/etc/ssl/certs/pysender.crt"
-#ssl_key="/etc/ssl/certs/pysender.key"
+ssl_enable="False"
+#ssl_cert="/etc/pysender/ssl/pysender.cert.pem"
+#ssl_key="/etc/pysender/ssl/pysender.key.pem"
