updated for testing

--- a/sender.conf
+++ b/sender.conf
@@ -1,9 +1,9 @@
 ## GrayLog Settings
-server="10.239.227.56"
+server="192.168.1.120"
 port="1515"
 load_balancer="12900"
-graylog_admin_user="root"
-graylog_admin_password="ch@ng3m3"
+graylog_admin_user="admin"
+graylog_admin_password="password1"
 
 ## PySender executables location
 file_location="/home/eorochena/GitHub/PySender"
