--- a/sender.conf
+++ b/sender.conf
@@ -1,9 +1,9 @@
 ## GrayLog Settings
-server="192.168.1.120"
+server="192.168.1.100"
 port="1515"
 load_balancer="12900"
 graylog_admin_user="admin"
-graylog_admin_password="password1"
+graylog_admin_password="password"
 
 ## PySender executables location
 file_location="/home/eorochena/GitHub/PySender"
