--- a/sender.conf
+++ b/sender.conf
@@ -2,7 +2,7 @@
 server="192.168.1.100"
 port="1514"
 load_balancer="12900"
-graylog_admin_user="admin"
+graylog_admin_user="admin2"
 graylog_admin_password="password"
 
 ## PySender executables location
