latest beta version

--- a/sender.conf
+++ b/sender.conf
@@ -1,9 +1,10 @@
 ## GrayLog Settings
 server="192.168.1.100"
 port="1514"
+monitor="666"
 load_balancer="12900"
-graylog_admin_user="admin2"
-graylog_admin_password="password"
+graylog_admin_user="admin"
+graylog_admin_password="l@m3P@ssw0rd"
 
 ## PySender executables location
 file_location="/home/eorochena/GitHub/PySender"
