--- a/sender.conf
+++ b/sender.conf
@@ -4,7 +4,7 @@ port="1514"
 monitor="666"
 load_balancer="12900"
 graylog_admin_user="admin"
-graylog_admin_password="l@m3P@ssw0rd"
+graylog_admin_password="L@m3P@ssw0rd"
 
 ## PySender executables location
 file_location="/home/eorochena/GitHub/PySender"
